# termux-packaging

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  check.sh
.github/workflows/: ci.yml
scripts/: generate-bootstraps.sh
src/: AndroidManifest.xml  app-build.gradle  apt_repo.rs  build.gradle  cmd_bootstraps.rs  cmd_checkrepo.rs  cmd_debinfo.rs  cmd_notfound.rs  cmd_package_apk.rs  deb_file.rs  main.rs
